# ConcordBroker

./: .claude-session  .dev-session.json  .editorconfig  .env.example  .env.notifications.example  .env.orchestrator.example  .eslintrc.cjs  .gitattributes  .gitignore  .gitignore.backup  .vercel_prod_commit.txt  .vercelignore  48_COUNTY_SCRAPER_ARCHITECTURE.md  ADVANCED_FILTERS_DATABASE_MAPPING.md  ADVANCED_FILTERS_OPTIMIZATION_IMPLEMENTATION.md  AGENTIC_ORCHESTRATION_PLAN.md  AGENT_6_DELIVERABLES_SUMMARY.md  AGENT_6_INDEX.txt  AGENT_AUDIT_COMPLETE.md  AGENT_DASHBOARD_UI_GUIDE.md  AGENT_HIERARCHY_OPTIMIZATION_COMPLETE.md  AGENT_INTEGRATION_GUIDE.md  AGENT_MIGRATION_COMPLETED.md  AGENT_OPTIMIZATION_COMPLETE_SUMMARY.md  AGENT_OPTIMIZATION_PLAN.md  AGENT_OPTIMIZATION_QUICK_REFERENCE.md  AGENT_ORCHESTRATION_PLAN.md  AGENT_QUICK_START.md  AGENT_SYSTEM_README.md  AGENT_SYSTEM_VISUAL_ARCHITECTURE.md  AI_SYSTEM_README.md  ALL_SCRAPERS_OPERATIONAL.md  ALTER_SALES_TABLE.sql  ANALYSIS_SCRIPTS_CLEANUP_SUMMARY.md  ANALYSIS_SCRIPTS_COMPLETE_REVIEW.md  APPLY_INDEXES_NOW.md  APPLY_TIMEOUTS_NOW.sql  APPRAISED_VALUE_FIX_SUMMARY.md  APPROACHES_VISUAL_COMPARISON.txt  AUDIT_SUMMARY.md  (+1437 more)
apps/api/: .env.example  Dockerfile  add_critical_missing_indexes.sql  advanced_filter_verifier.py  advanced_property_filters.py  ai_sales_history_api.py  automated_data_verification_suite.py  backup_management_api.py  cache_service.py  comprehensive_data_mapper.py  comprehensive_data_verification.py  config.py  create_filter_optimized_view.sql  create_performance_indexes.sql  create_staging_tables.sql  data_mapping_verification_system.py  database.py  db_analysis.py  deep_learning_data_mapper.py  dependencies.py  direct_database_api.py  entity_matching_schema.sql  entity_matching_service.py  fast_property_api.py  fetch_properties.py  filter_validation_system.py  fix_property_integration.py  fixed_autocomplete.py  florida_parcel_pipeline.py  get_property_data.py  integrated_property_api.py  intelligent_data_mapper.py  intelligent_data_mapping_system.py  keras_comprehensive_system.py  langchain_api.py  langchain_optimized.py  lightning_search_api.py  main.py  main_dev.py  main_localhost.py  (+78 more)
apps/api/agents/: base_agent.py  confidence_agent.py  entity_extraction_agent.py  graph_enhanced_agents.py  orchestrator.py  semantic_search_agent.py
apps/api/config/: huggingface.py  railway.py
apps/api/core/: comprehensive_logging.py  incremental_development.py
apps/api/cron/: sunbiz-daily-update.ts
apps/api/database/: models.py  optimized_connection.py
apps/api/graph/: backup_restore.py  enhanced_rag_service.py  init_graphiti.py  migrate_data.py  monitoring.py  performance_optimizer.py  property_graph_service.py  recommendation_engine.py
apps/api/models/: florida_parcels.py  sqlalchemy_models.py
apps/api/routers/: __init__.py  admin.py  analytics.py  auth.py  cursor_pagination.py  entities.py  health.py  parcels.py  properties.py
apps/api/routes/: ai_routes.py  ai_search.py  autonomous_routes.py  graph_routes.py  langgraph_routes.py  property_appraiser_routes.py  property_matcher.py  property_search.py  recommendation_routes.py
apps/api/services/: ai_search_service.py  auth.py  huggingface_service.py  score.py  sunbiz_live_agent.py
apps/api/src/: unifiedRouter.ts
apps/api/tests/: test_mortgage_analytics.py
apps/api/tools/: atomic_database_tools.py
apps/workers/: alert_system.py  analyze_sunbiz_contacts.py  async_orchestrator.py  base_supabase_db.py  broward_tax_deed_properties_20250910_184629.json  broward_tax_deed_scraper.py  check_auction_details.py  check_sunbiz_data.py  create_supabase_ftp_proxy.sql  dependency_monitor_agent.py  dependency_scheduler.py  deploy_functions.py  deploy_search_functions.sql  deploy_simple_search.py  florida_comprehensive_monitor.py  florida_data_downloader.py  florida_data_downloader_v2.py  florida_data_processor.py  florida_error_handler.py  florida_master_agent.py  florida_master_orchestrator.py  florida_monitoring_system.py  florida_nal_direct_download.py  florida_nal_downloader.py  florida_nal_manual_helper.py  florida_nal_web_downloader.py  florida_nav_downloader.py  florida_revenue_complete_downloader.py  florida_scheduler.py  florida_url_resolver.py  integrate_sunbiz_tax_deed.py  master_pipeline.py  npm_dependency_monitor.js  pyproject.toml  run_post_load_optimization.py  run_sunbiz_loader.py  scrape_broward_html.py  sunbiz_complete_loader.py  sunbiz_complete_schema.sql  sunbiz_concurrent_optimize.sql  (+20 more)
apps/workers/bcpa_scraper/: Dockerfile  main.py
apps/workers/broward_daily_index/: README.md  __init__.py  database.py  downloader.py  monitor.py  parser.py  pipeline.py
apps/workers/broward_layout_schema/: __init__.py  layout_downloader.py  layout_parser.py  monitor.py  schema_validator.py
apps/workers/broward_permits/: README.md  fort_lauderdale_permit_downloader.py  permit_db_loader.py  permit_monitor.py  permit_scraper.py
apps/workers/dor_processor/: Dockerfile  advanced_pipeline.py  duckdb_processor.py  file_manager.py  pipeline.js  requirements.txt  supabase_rest_loader.py  test_broward.py  unified_pipeline.py  worker.py
apps/workers/florida_mapping_data/: README.md  gis_parser.py  mapping_downloader.py  monitor.py
apps/workers/florida_nal_counties/: README.md  monitor.py  nal_counties_downloader.py  nal_database.py  nal_parser.py
apps/workers/florida_nap_counties/: README.md  monitor.py  nap_counties_downloader.py  nap_database.py  nap_parser.py
apps/workers/florida_nav/: nav_downloader.py  nav_parser.py
apps/workers/florida_nav_roll/: README.md  monitor.py  nav_roll_database.py  nav_roll_parser.py
apps/workers/florida_permits/: README.md  florida_permit_orchestrator.py
apps/workers/florida_revenue/: __init__.py  config.py  database.py  main.py  worker.py
apps/workers/florida_revenue_guide/: README.md  data_validator.py  guide_downloader.py  guide_parser.py  monitor.py
apps/workers/florida_sdf_counties/: README.md  monitor.py  sdf_counties_downloader.py  sdf_database.py  sdf_parser.py
apps/workers/nav_assessments/: __init__.py  config.py  (+4 more)
(+1765 files in other folders)
